fix: for grid overflow property

--- a/molecules/card/index.css
+++ b/molecules/card/index.css
@@ -21,6 +21,12 @@
       max-content
     );
 }
+.tui__card--hor * {
+  overflow: hidden;
+}
+.tui__card--hor-long * {
+  overflow: hidden;
+}
 .tui__card--hor .tui__card--img {
   grid-row: 1 / -1;
   grid-column: 1;
